frame/support/test/tests/decl_module_ui/reserved_keyword_two_times_integrity_test.stderr
error: `integrity_test` can only be passed once as input.
 --> tests/decl_module_ui/reserved_keyword_two_times_integrity_test.rs:1:1
  |
1 | / frame_support::decl_module! {
2 | |     pub struct Module<T: Config> for enum Call where origin: T::RuntimeOrigin, system=self {
3 | |         fn integrity_test() {}
4 | |
5 | |         fn integrity_test() {}
6 | |     }
7 | | }
  | |_^
  |
  = note: this error originates in the macro `$crate::decl_module` which comes from the expansion of the macro `frame_support::decl_module` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/decl_module_ui/reserved_keyword_two_times_integrity_test.rs:7:2
  |
7 | }
  |  ^ consider adding a `main` function to `$DIR/tests/decl_module_ui/reserved_keyword_two_times_integrity_test.rs`
